<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="20dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:text="Login ke Simple Recipe"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textColor="#4CAF50"/>

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:paddingStart="12dp"
        android:backgroundTint="#2196F3"
        android:textColor="#222222"
        android:textColorHint="#888888"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:paddingStart="12dp"
        android:backgroundTint="#2196F3"
        android:textColor="#222222"
        android:textColorHint="#888888"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login_button"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/login_register_text"
        android:layout_marginTop="18dp"
        android:textColor="#2196F3"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
