<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="20dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/etName"
        android:hint="@string/add_recipe_name_hint"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etDesc"
        android:hint="@string/add_recipe_desc_hint"
        android:inputType="textMultiLine"
        android:autofillHints="description"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">
        <Button
            android:id="@+id/btnBack"
            android:text="Kembali"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/btnSimpan"
            android:text="@string/add_recipe_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:textColor="#FFFFFF"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>
